<?xml version="1.0" encoding="utf-8"?>
<com.skywire.skycoin.vpn.controls.ModalBase xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:title="@string/server_info_note_title">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_info_original_note"
                android:textColor="@color/modal_window_light_text" />

            <TextView
                android:id="@+id/textNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Note"
                android:textColor="@color/modal_window_text" />

            <TextView
                android:id="@+id/textPersonalNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_info_personal_note"
                android:textColor="@color/modal_window_light_text" />

            <TextView
                android:id="@+id/textPersonalNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Personal note"
                android:textColor="@color/modal_window_text" />

        </LinearLayout>

        <com.skywire.skycoin.vpn.controls.ModalWindowButton
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/general_close" />

    </LinearLayout>

</com.skywire.skycoin.vpn.controls.ModalBase>
