<?xml version="1.0" encoding="utf-8"?>
<com.skywire.skycoin.vpn.controls.ModalBase xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    app:title="@string/tmp_confirmation_title">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Content"
            android:textColor="@color/modal_window_text"
            android:textSize="@dimen/normal_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <com.skywire.skycoin.vpn.controls.ModalWindowButton
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                app:text="@string/tmp_confirmation_no"
                app:use_secondary_color="true" />

            <com.skywire.skycoin.vpn.controls.ModalWindowButton
                android:id="@+id/buttonConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                app:text="@string/tmp_confirmation_yes" />
        </LinearLayout>

    </LinearLayout>

</com.skywire.skycoin.vpn.controls.ModalBase>
